// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/hub/Views/SetupView component More Snapshot tests with react-test-renderer, but for edge cases edge case where activeIndex not in steps index 1`] = `
<div
  className="full-height flex-container flex-dir-column"
>
  <div
    className="flex-child-grow"
  />
  <div>
    Mock Setup Navigation
  </div>
</div>
`;

exports[`app/hub/Views/SetupView component More Snapshot tests with react-test-renderer, but for edge cases edge case where steps is empty array 1`] = `
<div
  className="full-height flex-container flex-dir-column"
>
  <div
    className="flex-child-grow"
  />
  <div>
    Mock Setup Navigation
  </div>
</div>
`;

exports[`app/hub/Views/SetupView component Snapshot tests with react-test-renderer setup view is rendered correctly on first route 1`] = `
<div
  className="full-height flex-container flex-dir-column"
>
  <div
    className="flex-child-grow"
  >
    <div>
      <div>
        Mock Setup Header
      </div>
      <div>
        test component
      </div>
    </div>
  </div>
  <div>
    Mock Setup Navigation
  </div>
</div>
`;

exports[`app/hub/Views/SetupView component Snapshot tests with react-test-renderer setup view is rendered correctly on last route 1`] = `
<div
  className="full-height flex-container flex-dir-column"
>
  <div
    className="flex-child-grow"
  >
    <div>
      <div>
        Mock Setup Header
      </div>
      <div>
        test component
      </div>
    </div>
  </div>
  <div>
    Mock Setup Navigation
  </div>
</div>
`;
